tests/partial/02-no-ident.stderr
error: Missing field `ident`
 --> tests/partial/02-no-ident.rs:3:10
  |
3 | #[derive(Partial)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `Partial` (in Nightly builds, run with -Z macro-backtrace for more info)
